--- a/src/App.css
+++ b/src/App.css
@@ -26,16 +26,23 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
-.numButton{
-  border:1px solid #222;
-  background:#2ecc71;
+.padButton{
+    text-decoration: none;
+    color: #fff;
+    font-weight: bold;
+    background-color: #538fbe;
+    padding: 20px 0px;
+    font-size: 24px;
+    border: 1px solid #2d6898;
 }
-.optButton{
-  border:1px solid #222;
-  background:#27ae60;
+.padButton:hover{
+    background-color: #2d6898;
 }
 .display{
   background:#bdc3c7;
   border-bottom:5px solid #95a5a6;
-  padding:20px;
+  padding:30px 10px;
+}
+.display h1{
+  font-size:52px;
 }
